--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Počasí Aplikace</title>
+    <title>Počasí aktuálně</title>
 </head>
 <body>
     <h1>Počasí aktuálně</h1>
@@ -21,6 +21,7 @@
     <div id="forecastWeatherResult" style="display: none;"></div>
 
     <script src="script.js"></script>
+    <script src="airQuality.js"></script>
     <link rel="stylesheet" href="styles.css">
 
     <video autoplay muted loop id="myVideo">
