--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <button onclick="getForecast(cityInput.value)">Získat 5-denní předpověď</button>
     </div>
     <div id="currentWeatherResult"></div>
-    <div id="forecastWeatherResult"></div>
+    <div id="forecastWeatherResult"></div><br>
     
     <div id="forecastHeader" class="forecast-header" style="display: none;">
     </div>
