--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </div>
     
     <div id="forecastWeatherResult" style="display: none;">
-        <button class="close-btn" onclick="closeWindow('forecastWeatherResult')">×</button>
+        <button class="close-btn" onclick="closeWindow('forecastWeatherResult')">×××</button>
         <!-- Zde se zobrazí předpověď na 5 dní -->
     </div>
 
