--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
       
       <div id="weatherResult" style="display: none;">
-    </div>
+    </div><br>
     
     <div id="forecastWeatherResult" style="display: none;">
         <button class="close-btn" onclick="closeWindow('forecastWeatherResult')">×××</button>
